<resources>
    <string name="app_name">Tiime 2</string>
    <string name="wages">Gestion sociale</string>
    <string name="mileage_allowances">Indemnités kilométriques</string>
    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>
    <string name="distance_format">%d km</string>
    <string name="allowance_purpose_hint">Client, motif du déplacement</string>
    <string name="starting_address">Départ</string>
    <string name="arrival_address">Arrivée</string>
    <string name="distance_prompt">Distance&#160;:</string>
    <string name="add_attachment">Ajouter un justificatif</string>
    <string name="comment">Commentaire</string>
    <string name="km_suffix">&#160;km</string>
    <string name="save">Enregistrer</string>
    <string name="round_trip_abbr">A/R</string>
    <string name="vehicle">Véhicule</string>
    <string name="add_vehicle">Ajouter un véhicule</string>
    <string name="vehicle_name">Nom du véhicule</string>
    <string name="vehicle_type">Type</string>
    <string name="fiscal_power">Puissance fiscale</string>
    <string name="add_vehicle_card">Ajouter la carte grise</string>
    <string name="vehicle_card">Carte grise</string>
    <string name="new_vehicle">Nouveau véhicule</string>
    <string name="replace">Remplacer</string>
    <string name="delete">Supprimer</string>
    <string name="no_app_available">Aucune application n’est disponible pour ouvrir ce document.</string>
    <string name="vehicle_type_car">Voiture</string>
    <string name="vehicle_type_two_wheeler_1">Deux-roues &lt;&#160;50 cm³</string>
    <string name="vehicle_type_two_wheeler_2">Deux-roues ≥&#160;50 cm³</string>
    <string name="trip_dates">Dates de déplacement</string>
    <string name="dates_empty_error">Sélectionnez au moins une date.</string>
    <string name="current_location">Position actuelle…</string>
    <string name="no_directions_found">Aucun trajet n’a été trouvé.</string>
    <string name="distance_updated">La distance a été recalculée.</string>
    <string name="vehicle_power_car_3_or_less">3 CV ou moins</string>
    <string name="vehicle_power_car_4">4 CV</string>
    <string name="vehicle_power_car_5">5 CV</string>
    <string name="vehicle_power_car_6">6 CV</string>
    <string name="vehicle_power_car_7_or_more">7 CV ou plus</string>
    <string name="vehicle_power_two_wheeler_1_2">1 ou 2 CV</string>
    <string name="vehicle_power_two_wheeler_3_4_5">3, 4 ou 5 CV</string>
    <string name="vehicle_power_two_wheeler_6_or_more">6 CV ou plus</string>
    <string name="validate">Valider</string>
    <string name="holiday_type_unpaid_holidays">Congés sans solde</string>
    <string name="holidays_count_format">%.1f j</string>
    <string name="holiday_type_compensatory_time">RTT</string>
    <string name="holiday_type_sick_leave">Arrêt maladie</string>
    <string name="holiday_type_work_accident">Accident du travail</string>
    <string name="holiday_type_family_matters">Raison familiale</string>
    <string name="holiday_type_paid_vacation">Congés payés</string>
    <string name="no_holiday">Aucun congé</string>
    <string name="net_increase">Augmentation nette</string>
    <string name="gross_increase">Augmentation brute</string>
    <string name="net_bonus">Prime nette</string>
    <string name="gross_bonus">Prime brute</string>
    <string name="increase_and_bonus">Augmentation et prime</string>
    <string name="year">Année</string>
    <string name="layout_list">List</string>
    <string name="half_day">Demi-journée</string>
    <string name="holiday_date_locked">Il n’est plus possible d’ajouter un congé à cette date.</string>
    <string name="gross_salary_label">Salaire brut&#160;:</string>
    <string name="increase_label">Augmentation&#160;:</string>
    <string name="bonus_label">Prime&#160;:</string>
    <string name="net">Net</string>
    <string name="gross">Brut</string>
    <string name="select_end_date">Sélectionnez la date de fin.</string>
    <string name="edit">Modifier</string>
    <string name="edit_vehicle">Modifier le véhicule</string>
    <string name="required">Requis</string>
    <string name="generic_error_message">Une erreur s’est produite.</string>
    <string name="unsupported_type_error">Ce type de fichier n’est pas pris en charge.</string>
    <string name="delete_vehicle_prompt">Supprimer le véhicule&#160;?</string>
    <string name="delete_vehicle_message">Vous ne pourrez plus l’utiliser pour déclarer vos trajets.</string>
    <string name="vehicle_deleted">Le véhicule a été supprimé.</string>
    <string name="network_error">La connexion n’est pas disponible.</string>
    <string name="vehicle_card_saved">Carte grise ajoutée.</string>
    <string name="allowance_purpose_mandatory_error">Indiquez le motif du déplacement ou le nom du client.</string>
    <string name="no_vehicle">Aucun véhicule n’est enregistré.</string>
    <string name="no_allowances">Aucune indemnité kilométrique enregistrée.</string>
    <string name="no_employee">Aucun salarié n’est enregistré.</string>
    <string name="no_employee_wages">Aucune paie n’est enregistrée pour ce salarié.</string>
    <string name="attachment">Justificatif</string>
    <string name="holiday_wage_warning_format">⚠️ Ce congé sera comptabilisé sur la paie de %s.</string>
    <string name="login">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="password_recovery">Mot de passe oublié</string>
    <string name="invalid_format">Format incorrect</string>
    <string name="username">Identifiant</string>
    <string name="login_failed">La connexion a échoué.</string>
    <string name="invalid_credentials">Identifiants incorrects</string>
    <string name="retry">Réessayer</string>
</resources>
