<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import
            alias="res"
            type="com.cubber.tiime.utils.Resources" />

        <import type="com.cubber.tiime.model.Vehicle" />

        <variable
            name="vehicle"
            type="Vehicle" />

        <variable
            name="types"
            type="java.util.List&lt;String>" />

        <variable
            name="typeListener"
            type="android.databinding.adapters.AdapterViewBindingAdapter.OnItemSelected" />

        <variable
            name="powers"
            type="java.util.List&lt;String>" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/large_spacing"
            android:paddingLeft="?dialogPreferredPadding"
            android:paddingRight="?dialogPreferredPadding"
            android:paddingTop="@dimen/large_spacing">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicle_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{ vehicle != null }"
                    android:inputType="text|textCapWords"
                    android:maxLines="1"
                    android:text="@={ vehicle.name }" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/type"
                    android:text="@string/vehicle_type"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <Spinner
                    android:id="@+id/type"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    items="@{ types }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="@{ vehicle.id == 0 }"
                    android:minHeight="?dropdownListPreferredItemHeight"
                    android:onItemSelected="@{ typeListener }"
                    android:selectedItem="@={ vehicle.type }"

                    tools:listitem="@layout/vehicle_type_spinner_item" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:orientation="vertical"
                app:visible="@{ powers != null }">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/fiscal_power"
                    android:text="@string/fiscal_power"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <Spinner
                    android:id="@+id/fiscal_power"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    items="@{ powers }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="@{ vehicle.id == 0 }"
                    android:minHeight="?dropdownListPreferredItemHeight"
                    android:selectedItem="@={ vehicle.fiscalPower }"
                    tools:listitem="@android:layout/simple_spinner_item" />

            </LinearLayout>

            <Button
                android:id="@+id/add_vehicle_card"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:drawableLeft="@drawable/ic_certificate_24dp"
                android:drawablePadding="@dimen/spacing"
                android:drawableStart="@drawable/ic_certificate_24dp"
                android:enabled="@{ vehicle != null }"
                android:text="@string/add_vehicle_card"
                app:visible="@{ vehicle.card == null }" />

            <LinearLayout
                style="?buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:padding="0dp"
                app:visible="@{ vehicle.card != null }">

                <Button
                    android:id="@+id/vehicle_card"
                    style="?borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/small_spacing"
                    android:drawableStart="@{ res.fileIcon(context, vehicle.card) }"
                    android:text="@string/vehicle_card"
                    android:textAppearance="?attr/textAppearanceListItemSmall"
                    tools:drawableStart="@drawable/ic_file_generic"
                    tools:ignore="RtlCompat" />

                <ImageButton
                    android:id="@+id/vehicle_card_menu"
                    style="?actionOverflowButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>